Changing to "alert"

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 	    }
 
 	    function onDeviceReady() {
-	    	window.location.href = "http://ckportfolio.com"
+	    	alert("Hello world");
 	    }
 
     </script>
