Both href and alert

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,9 @@
 	    }
 
 	    function onDeviceReady() {
-	    	alert("Hello world");
+	    	alert("Hello");
+	    	window.location.href = "http://ckportfolio.com";
+
 	    }
 
     </script>
