--- a/www/index.html
+++ b/www/index.html
@@ -10,9 +10,7 @@
 	    }
 
 	    function onDeviceReady() {
-	    	alert("Hello");
-	    	window.location.href = "http://ckportfolio.com";
-
+	    	window.location.href = "http://ckprototype.com/aotgm";
 	    }
 
     </script>
